# Mercator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  sources.cmake  update-sources.py
src/: bundle_adjustment.cc  bundle_adjustment.h  camera.cc  camera.h  cost_functions.h  image.cc  image.h  mercator.cc  mercator.h  point.cc  point.h  point2d.cc  point2d.h  point3d.cc  point3d.h
src/util/: colmap.cc  colmap.h  config.cc  config.h  logger.cc  logger.h  types.h
